feat: add basic html

--- a/index.html
+++ b/index.html
@@ -8,7 +8,16 @@
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-  <div>hello</div>
+  <!-- Notebook App -->
+  <div id="notebook">
+    <!-- Main pane -->
+    <section class="main">
+      <textarea v-model="content"></textarea>
+    </section>
+
+    <!-- Preview pane -->
+    <aside class="preview"></aside>
+  </div>
 
   <!-- Include the library in the page -->
   <script src="https://cdn.jsdelivr.net/npm/vue"></script>
