--- a/index.html
+++ b/index.html
@@ -16,11 +16,13 @@
     </section>
 
     <!-- Preview pane -->
-    <aside class="preview"></aside>
+    <aside class="preview" v-html="notePreview"></aside>
   </div>
 
   <!-- Include the library in the page -->
   <script src="https://cdn.jsdelivr.net/npm/vue"></script>
+  <script src="https://unpkg.com/marked"></script>
+  <!-- My script -->
   <script src="./script.js"></script>
 </body>
 </html>
